// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sku-webpack-plugin build should create valid app 1`] = `
"<!doctype html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width,initial-scale=1"
    >
    <script
      defer="defer"
      src="main.js"
    >
    </script>
    <link
      href="main.css"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>"
POST HYDRATE DIFFS: 
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -20,5 +20,18 @@
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html._1hx6zavz,html._1hx6zavz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="_1wfo4vb0 yi595p18 yi595p1b">
+        <div class="p77vct0 _1hx6zav7i _1hx6zav6e _1hx6zav9q _1hx6zav8m _1hx6zav5e yi595p18 yi595p1b _1hx6zav32 _1hx6zav35">
+          <span class="p77vct0 _1hx6zav4y yi595p0 yi595p1 yi595p21 m3vcy34 yi595pd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;

exports[`sku-webpack-plugin build should generate the expected files 1`] = `
{
  "index.html": "<!doctype html><html><head><meta charset="utf-8"><title>Webpack App</title><meta name="viewport" content="width=device-width,initial-scale=1"><script defer="defer" src="main.js"></script><link href="main.css" rel="stylesheet"></head><body></body></html>",
  "main.css": .p77vct0 {
  border: 0;
  box-sizing: border-box;
  font-size: 100%;
  font: inherit;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  -webkit-tap-highlight-color: transparent;
}
[data-braid-hidefocusrings] .p77vct0 {
  outline: none;
}
.p77vct1 {
  display: block;
}
.p77vct2 {
  line-height: 1;
}
.p77vct3 {
  list-style: none;
}
.p77vct4 {
  quotes: none;
}
.p77vct4:after,
.p77vct4:before {
  content: "";
}
.p77vct5 {
  border-collapse: collapse;
  border-spacing: 0;
}
.p77vct6 {
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
}
.p77vct7 {
  background-color: transparent;
}
.p77vct9 {
  color: inherit;
}
.p77vcta:disabled {
  opacity: 1;
}
.p77vcta::-ms-expand {
  display: none;
}
.p77vctc[type="number"] {
  -moz-appearance: textfield;
}
.p77vctc[type="number"]::-webkit-inner-spin-button,
.p77vctc[type="number"]::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.p77vctc::-ms-clear {
  display: none;
}
.p77vctc::-webkit-search-cancel-button {
  -webkit-appearance: none;
}
.p77vctf {
  color: inherit;
  text-decoration: none;
}
._1hx6zav0 {
  overflow: hidden;
}
._1hx6zav1 {
  overflow: scroll;
}
._1hx6zav2 {
  overflow: visible;
}
._1hx6zav3 {
  overflow: auto;
}
._1hx6zav4 {
  -webkit-user-select: none;
  -moz-user-select: none;
  user-select: none;
}
._1hx6zav5 {
  outline: none;
}
._1hx6zav6 {
  opacity: 0;
}
._1hx6zav7 {
  z-index: 0;
}
._1hx6zav8 {
  z-index: 1;
}
._1hx6zav9 {
  z-index: 2;
}
._1hx6zava {
  z-index: 90;
}
._1hx6zavb {
  z-index: 100;
}
._1hx6zavc {
  z-index: 200;
}
._1hx6zavd {
  z-index: 290;
}
._1hx6zave {
  z-index: 300;
}
._1hx6zavf {
  z-index: 400;
}
._1hx6zavg {
  cursor: default;
}
._1hx6zavh {
  cursor: pointer;
}
._1hx6zavi {
  pointer-events: none;
}
._1hx6zavj {
  top: 0;
}
._1hx6zavk {
  bottom: 0;
}
._1hx6zavl {
  left: 0;
}
._1hx6zavm {
  right: 0;
}
._1hx6zavn {
  height: 100%;
}
._1hx6zavo {
  height: var(--zxcn1o9);
}
._1hx6zavp {
  width: 100%;
}
._1hx6zavq {
  width: var(--zxcn1o9);
}
._1hx6zavr {
  min-width: 0;
}
._1hx6zavs {
  max-width: var(--zxcn1o11);
}
._1hx6zavt {
  max-width: var(--zxcn1o12);
}
._1hx6zavu {
  max-width: var(--zxcn1o13);
}
._1hx6zavv {
  max-width: var(--zxcn1o14);
}
._1hx6zavw {
  transition: var(--zxcn1o5i);
}
._1hx6zavx {
  transition: var(--zxcn1o5j);
}
._1hx6zavy:active {
  transform: var(--zxcn1o5k);
}
html._1hx6zavz ._1hx6zav11,
html:not(._1hx6zavz) ._1hx6zav10 {
  background: var(--zxcn1o1t);
}
html._1hx6zavz ._1hx6zav13,
html:not(._1hx6zavz) ._1hx6zav12 {
  background: var(--zxcn1o1u);
}
html._1hx6zavz ._1hx6zav15,
html:not(._1hx6zavz) ._1hx6zav14 {
  background: var(--zxcn1o1v);
}
html._1hx6zavz ._1hx6zav17,
html:not(._1hx6zavz) ._1hx6zav16 {
  background: var(--zxcn1o1w);
}
html._1hx6zavz ._1hx6zav19,
html:not(._1hx6zavz) ._1hx6zav18 {
  background: var(--zxcn1o1x);
}
html._1hx6zavz ._1hx6zav1b,
html:not(._1hx6zavz) ._1hx6zav1a {
  background: var(--zxcn1o1y);
}
html._1hx6zavz ._1hx6zav1d,
html:not(._1hx6zavz) ._1hx6zav1c {
  background: var(--zxcn1o1z);
}
html._1hx6zavz ._1hx6zav1f,
html:not(._1hx6zavz) ._1hx6zav1e {
  background: var(--zxcn1o20);
}
html._1hx6zavz ._1hx6zav1h,
html:not(._1hx6zavz) ._1hx6zav1g {
  background: var(--zxcn1o21);
}
html._1hx6zavz ._1hx6zav1j,
html:not(._1hx6zavz) ._1hx6zav1i {
  background: var(--zxcn1o22);
}
html._1hx6zavz ._1hx6zav1l,
html:not(._1hx6zavz) ._1hx6zav1k {
  background: var(--zxcn1o23);
}
html._1hx6zavz ._1hx6zav1n,
html:not(._1hx6zavz) ._1hx6zav1m {
  background: var(--zxcn1o24);
}
html._1hx6zavz ._1hx6zav1p,
html:not(._1hx6zavz) ._1hx6zav1o {
  background: var(--zxcn1o25);
}
html._1hx6zavz ._1hx6zav1r,
html:not(._1hx6zavz) ._1hx6zav1q {
  background: var(--zxcn1o26);
}
html._1hx6zavz ._1hx6zav1t,
html:not(._1hx6zavz) ._1hx6zav1s {
  background: var(--zxcn1o27);
}
html._1hx6zavz ._1hx6zav1v,
html:not(._1hx6zavz) ._1hx6zav1u {
  background: var(--zxcn1o28);
}
html._1hx6zavz ._1hx6zav1x,
html:not(._1hx6zavz) ._1hx6zav1w {
  background: var(--zxcn1o29);
}
html._1hx6zavz ._1hx6zav1z,
html:not(._1hx6zavz) ._1hx6zav1y {
  background: var(--zxcn1o2a);
}
html._1hx6zavz ._1hx6zav21,
html:not(._1hx6zavz) ._1hx6zav20 {
  background: var(--zxcn1o2b);
}
html._1hx6zavz ._1hx6zav23,
html:not(._1hx6zavz) ._1hx6zav22 {
  background: var(--zxcn1o2c);
}
html._1hx6zavz ._1hx6zav25,
html:not(._1hx6zavz) ._1hx6zav24 {
  background: var(--zxcn1o2d);
}
html._1hx6zavz ._1hx6zav27,
html:not(._1hx6zavz) ._1hx6zav26 {
  background: var(--zxcn1o2e);
}
html._1hx6zavz ._1hx6zav29,
html:not(._1hx6zavz) ._1hx6zav28 {
  background: var(--zxcn1o2f);
}
html._1hx6zavz ._1hx6zav2b,
html:not(._1hx6zavz) ._1hx6zav2a {
  background: var(--zxcn1o2g);
}
html._1hx6zavz ._1hx6zav2d,
html:not(._1hx6zavz) ._1hx6zav2c {
  background: var(--zxcn1o2h);
}
html._1hx6zavz ._1hx6zav2f,
html:not(._1hx6zavz) ._1hx6zav2e {
  background: var(--zxcn1o2i);
}
html._1hx6zavz ._1hx6zav2h,
html:not(._1hx6zavz) ._1hx6zav2g {
  background: var(--zxcn1o2j);
}
html._1hx6zavz ._1hx6zav2j,
html:not(._1hx6zavz) ._1hx6zav2i {
  background: var(--zxcn1o2k);
}
html._1hx6zavz ._1hx6zav2l,
html:not(._1hx6zavz) ._1hx6zav2k {
  background: var(--zxcn1o2l);
}
html._1hx6zavz ._1hx6zav2n,
html:not(._1hx6zavz) ._1hx6zav2m {
  background: var(--zxcn1o2m);
}
html._1hx6zavz ._1hx6zav2p,
html:not(._1hx6zavz) ._1hx6zav2o {
  background: var(--zxcn1o2n);
}
html._1hx6zavz ._1hx6zav2r,
html:not(._1hx6zavz) ._1hx6zav2q {
  background: var(--zxcn1o2o);
}
html._1hx6zavz ._1hx6zav2t,
html:not(._1hx6zavz) ._1hx6zav2s {
  background: var(--zxcn1o2p);
}
html._1hx6zavz ._1hx6zav2v,
html:not(._1hx6zavz) ._1hx6zav2u {
  background: var(--zxcn1o2q);
}
html._1hx6zavz ._1hx6zav2x,
html:not(._1hx6zavz) ._1hx6zav2w {
  background: var(--zxcn1o2r);
}
html._1hx6zavz ._1hx6zav2z,
html:not(._1hx6zavz) ._1hx6zav2y {
  background: var(--zxcn1o2s);
}
html._1hx6zavz ._1hx6zav31,
html:not(._1hx6zavz) ._1hx6zav30 {
  background: var(--zxcn1o2t);
}
html._1hx6zavz ._1hx6zav33,
html:not(._1hx6zavz) ._1hx6zav32 {
  background: var(--zxcn1o2u);
}
html._1hx6zavz ._1hx6zav35,
html:not(._1hx6zavz) ._1hx6zav34 {
  background: var(--zxcn1o2v);
}
html._1hx6zavz ._1hx6zav37,
html:not(._1hx6zavz) ._1hx6zav36 {
  box-shadow: var(--zxcn1o5l);
}
html._1hx6zavz ._1hx6zav39,
html:not(._1hx6zavz) ._1hx6zav38 {
  box-shadow: var(--zxcn1o5m);
}
html._1hx6zavz ._1hx6zav3b,
html:not(._1hx6zavz) ._1hx6zav3a {
  box-shadow: var(--zxcn1o5n);
}
html._1hx6zavz ._1hx6zav3d,
html:not(._1hx6zavz) ._1hx6zav3c {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1of);
}
html._1hx6zavz ._1hx6zav3f,
html:not(._1hx6zavz) ._1hx6zav3e {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1og);
}
html._1hx6zavz ._1hx6zav3h,
html:not(._1hx6zavz) ._1hx6zav3g {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1of);
}
html._1hx6zavz ._1hx6zav3j,
html:not(._1hx6zavz) ._1hx6zav3i {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1og);
}
html._1hx6zavz ._1hx6zav3l,
html:not(._1hx6zavz) ._1hx6zav3k {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1oh);
}
html._1hx6zavz ._1hx6zav3n,
html:not(._1hx6zavz) ._1hx6zav3m {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1oi);
}
html._1hx6zavz ._1hx6zav3p,
html:not(._1hx6zavz) ._1hx6zav3o {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1oj);
}
html._1hx6zavz ._1hx6zav3r,
html:not(._1hx6zavz) ._1hx6zav3q {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1oj);
}
html._1hx6zavz ._1hx6zav3t,
html:not(._1hx6zavz) ._1hx6zav3s {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ok);
}
html._1hx6zavz ._1hx6zav3v,
html:not(._1hx6zavz) ._1hx6zav3u {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1ok);
}
html._1hx6zavz ._1hx6zav3x,
html:not(._1hx6zavz) ._1hx6zav3w {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ol);
}
html._1hx6zavz ._1hx6zav3z,
html:not(._1hx6zavz) ._1hx6zav3y {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1on);
}
html._1hx6zavz ._1hx6zav41,
html:not(._1hx6zavz) ._1hx6zav40 {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1on);
}
html._1hx6zavz ._1hx6zav43,
html:not(._1hx6zavz) ._1hx6zav42 {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1oo);
}
html._1hx6zavz ._1hx6zav45,
html:not(._1hx6zavz) ._1hx6zav44 {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1oo);
}
html._1hx6zavz ._1hx6zav47,
html:not(._1hx6zavz) ._1hx6zav46 {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1op);
}
html._1hx6zavz ._1hx6zav49,
html:not(._1hx6zavz) ._1hx6zav48 {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1oq);
}
html._1hx6zavz ._1hx6zav4b,
html:not(._1hx6zavz) ._1hx6zav4a {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1or);
}
html._1hx6zavz ._1hx6zav4d,
html:not(._1hx6zavz) ._1hx6zav4c {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1or);
}
html._1hx6zavz ._1hx6zav4f,
html:not(._1hx6zavz) ._1hx6zav4e {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1os);
}
html._1hx6zavz ._1hx6zav4h,
html:not(._1hx6zavz) ._1hx6zav4g {
  box-shadow: inset 0 0 0 var(--zxcn1oz) var(--zxcn1os);
}
html._1hx6zavz ._1hx6zav4j,
html:not(._1hx6zavz) ._1hx6zav4i {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ot);
}
html._1hx6zavz ._1hx6zav4l,
html:not(._1hx6zavz) ._1hx6zav4k {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ou);
}
html._1hx6zavz ._1hx6zav4n,
html:not(._1hx6zavz) ._1hx6zav4m {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ov);
}
html._1hx6zavz ._1hx6zav4p,
html:not(._1hx6zavz) ._1hx6zav4o {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ow);
}
html._1hx6zavz ._1hx6zav4r,
html:not(._1hx6zavz) ._1hx6zav4q {
  box-shadow: inset 0 0 0 var(--zxcn1oy) var(--zxcn1ox);
}
html._1hx6zavz ._1hx6zav4t,
html:not(._1hx6zavz) ._1hx6zav4s {
  box-shadow: 0 0 0 var(--zxcn1o10) var(--zxcn1om);
}
._1hx6zav4u {
  display: none;
}
._1hx6zav4y {
  display: block;
}
._1hx6zav52 {
  display: inline;
}
._1hx6zav56 {
  display: inline-block;
}
._1hx6zav5a {
  display: flex;
}
._1hx6zav5e {
  position: relative;
}
._1hx6zav5i {
  position: absolute;
}
._1hx6zav5m {
  position: fixed;
}
._1hx6zav5q {
  border-radius: 0;
}
._1hx6zav5u {
  border-radius: 9999px;
}
._1hx6zav5y {
  border-radius: var(--zxcn1ob);
}
._1hx6zav62 {
  border-radius: var(--zxcn1oc);
}
._1hx6zav66 {
  border-radius: var(--zxcn1od);
}
._1hx6zav6a {
  border-radius: var(--zxcn1oe);
}
._1hx6zav6e {
  padding-top: var(--zxcn1o0);
}
._1hx6zav6i {
  padding-top: var(--zxcn1o1);
}
._1hx6zav6m {
  padding-top: var(--zxcn1o2);
}
._1hx6zav6q {
  padding-top: var(--zxcn1o3);
}
._1hx6zav6u {
  padding-top: var(--zxcn1o4);
}
._1hx6zav6y {
  padding-top: var(--zxcn1o5);
}
._1hx6zav72 {
  padding-top: var(--zxcn1o6);
}
._1hx6zav76 {
  padding-top: var(--zxcn1o7);
}
._1hx6zav7a {
  padding-top: var(--zxcn1o8);
}
._1hx6zav7e {
  padding-top: 0;
}
._1hx6zav7i {
  padding-bottom: var(--zxcn1o0);
}
._1hx6zav7m {
  padding-bottom: var(--zxcn1o1);
}
._1hx6zav7q {
  padding-bottom: var(--zxcn1o2);
}
._1hx6zav7u {
  padding-bottom: var(--zxcn1o3);
}
._1hx6zav7y {
  padding-bottom: var(--zxcn1o4);
}
._1hx6zav82 {
  padding-bottom: var(--zxcn1o5);
}
._1hx6zav86 {
  padding-bottom: var(--zxcn1o6);
}
._1hx6zav8a {
  padding-bottom: var(--zxcn1o7);
}
._1hx6zav8e {
  padding-bottom: var(--zxcn1o8);
}
._1hx6zav8i {
  padding-bottom: 0;
}
._1hx6zav8m {
  padding-right: var(--zxcn1o0);
}
._1hx6zav8q {
  padding-right: var(--zxcn1o1);
}
._1hx6zav8u {
  padding-right: var(--zxcn1o2);
}
._1hx6zav8y {
  padding-right: var(--zxcn1o3);
}
._1hx6zav92 {
  padding-right: var(--zxcn1o4);
}
._1hx6zav96 {
  padding-right: var(--zxcn1o5);
}
._1hx6zav9a {
  padding-right: var(--zxcn1o6);
}
._1hx6zav9e {
  padding-right: var(--zxcn1o7);
}
._1hx6zav9i {
  padding-right: var(--zxcn1o8);
}
._1hx6zav9m {
  padding-right: 0;
}
._1hx6zav9q {
  padding-left: var(--zxcn1o0);
}
._1hx6zav9u {
  padding-left: var(--zxcn1o1);
}
._1hx6zav9y {
  padding-left: var(--zxcn1o2);
}
._1hx6zava2 {
  padding-left: var(--zxcn1o3);
}
._1hx6zava6 {
  padding-left: var(--zxcn1o4);
}
._1hx6zavaa {
  padding-left: var(--zxcn1o5);
}
._1hx6zavae {
  padding-left: var(--zxcn1o6);
}
._1hx6zavai {
  padding-left: var(--zxcn1o7);
}
._1hx6zavam {
  padding-left: var(--zxcn1o8);
}
._1hx6zavaq {
  padding-left: 0;
}
._1hx6zavau {
  margin-top: var(--zxcn1o0);
}
._1hx6zavay {
  margin-top: var(--zxcn1o1);
}
._1hx6zavb2 {
  margin-top: var(--zxcn1o2);
}
._1hx6zavb6 {
  margin-top: var(--zxcn1o3);
}
._1hx6zavba {
  margin-top: var(--zxcn1o4);
}
._1hx6zavbe {
  margin-top: var(--zxcn1o5);
}
._1hx6zavbi {
  margin-top: var(--zxcn1o6);
}
._1hx6zavbm {
  margin-top: var(--zxcn1o7);
}
._1hx6zavbq {
  margin-top: var(--zxcn1o8);
}
._1hx6zavbu {
  margin-top: 0;
}
._1hx6zavby {
  margin-bottom: var(--zxcn1o0);
}
._1hx6zavc2 {
  margin-bottom: var(--zxcn1o1);
}
._1hx6zavc6 {
  margin-bottom: var(--zxcn1o2);
}
._1hx6zavca {
  margin-bottom: var(--zxcn1o3);
}
._1hx6zavce {
  margin-bottom: var(--zxcn1o4);
}
._1hx6zavci {
  margin-bottom: var(--zxcn1o5);
}
._1hx6zavcm {
  margin-bottom: var(--zxcn1o6);
}
._1hx6zavcq {
  margin-bottom: var(--zxcn1o7);
}
._1hx6zavcu {
  margin-bottom: var(--zxcn1o8);
}
._1hx6zavcy {
  margin-bottom: 0;
}
._1hx6zavd2 {
  margin-right: var(--zxcn1o0);
}
._1hx6zavd6 {
  margin-right: var(--zxcn1o1);
}
._1hx6zavda {
  margin-right: var(--zxcn1o2);
}
._1hx6zavde {
  margin-right: var(--zxcn1o3);
}
._1hx6zavdi {
  margin-right: var(--zxcn1o4);
}
._1hx6zavdm {
  margin-right: var(--zxcn1o5);
}
._1hx6zavdq {
  margin-right: var(--zxcn1o6);
}
._1hx6zavdu {
  margin-right: var(--zxcn1o7);
}
._1hx6zavdy {
  margin-right: var(--zxcn1o8);
}
._1hx6zave2 {
  margin-right: 0;
}
._1hx6zave6 {
  margin-left: var(--zxcn1o0);
}
._1hx6zavea {
  margin-left: var(--zxcn1o1);
}
._1hx6zavee {
  margin-left: var(--zxcn1o2);
}
._1hx6zavei {
  margin-left: var(--zxcn1o3);
}
._1hx6zavem {
  margin-left: var(--zxcn1o4);
}
._1hx6zaveq {
  margin-left: var(--zxcn1o5);
}
._1hx6zaveu {
  margin-left: var(--zxcn1o6);
}
._1hx6zavey {
  margin-left: var(--zxcn1o7);
}
._1hx6zavf2 {
  margin-left: var(--zxcn1o8);
}
._1hx6zavf6 {
  margin-left: 0;
}
._1hx6zavfa {
  align-items: flex-start;
}
._1hx6zavfe {
  align-items: center;
}
._1hx6zavfi {
  align-items: flex-end;
}
._1hx6zavfm {
  justify-content: flex-start;
}
._1hx6zavfq {
  justify-content: center;
}
._1hx6zavfu {
  justify-content: flex-end;
}
._1hx6zavfy {
  justify-content: space-between;
}
._1hx6zavg2 {
  flex-direction: row;
}
._1hx6zavg6 {
  flex-direction: row-reverse;
}
._1hx6zavga {
  flex-direction: column;
}
._1hx6zavge {
  flex-direction: column-reverse;
}
._1hx6zavgi {
  flex-wrap: wrap;
}
._1hx6zavgm {
  flex-wrap: nowrap;
}
._1hx6zavgq {
  flex-shrink: 0;
}
._1hx6zavgu {
  flex-grow: 0;
}
._1hx6zavgy {
  flex-grow: 1;
}
._1hx6zavh2 {
  text-align: left;
}
._1hx6zavh6 {
  text-align: center;
}
._1hx6zavha {
  text-align: right;
}
@media screen and (min-width: 740px) {
  ._1hx6zav4v {
    display: none;
  }
  ._1hx6zav4z {
    display: block;
  }
  ._1hx6zav53 {
    display: inline;
  }
  ._1hx6zav57 {
    display: inline-block;
  }
  ._1hx6zav5b {
    display: flex;
  }
  ._1hx6zav5f {
    position: relative;
  }
  ._1hx6zav5j {
    position: absolute;
  }
  ._1hx6zav5n {
    position: fixed;
  }
  ._1hx6zav5r {
    border-radius: 0;
  }
  ._1hx6zav5v {
    border-radius: 9999px;
  }
  ._1hx6zav5z {
    border-radius: var(--zxcn1ob);
  }
  ._1hx6zav63 {
    border-radius: var(--zxcn1oc);
  }
  ._1hx6zav67 {
    border-radius: var(--zxcn1od);
  }
  ._1hx6zav6b {
    border-radius: var(--zxcn1oe);
  }
  ._1hx6zav6f {
    padding-top: var(--zxcn1o0);
  }
  ._1hx6zav6j {
    padding-top: var(--zxcn1o1);
  }
  ._1hx6zav6n {
    padding-top: var(--zxcn1o2);
  }
  ._1hx6zav6r {
    padding-top: var(--zxcn1o3);
  }
  ._1hx6zav6v {
    padding-top: var(--zxcn1o4);
  }
  ._1hx6zav6z {
    padding-top: var(--zxcn1o5);
  }
  ._1hx6zav73 {
    padding-top: var(--zxcn1o6);
  }
  ._1hx6zav77 {
    padding-top: var(--zxcn1o7);
  }
  ._1hx6zav7b {
    padding-top: var(--zxcn1o8);
  }
  ._1hx6zav7f {
    padding-top: 0;
  }
  ._1hx6zav7j {
    padding-bottom: var(--zxcn1o0);
  }
  ._1hx6zav7n {
    padding-bottom: var(--zxcn1o1);
  }
  ._1hx6zav7r {
    padding-bottom: var(--zxcn1o2);
  }
  ._1hx6zav7v {
    padding-bottom: var(--zxcn1o3);
  }
  ._1hx6zav7z {
    padding-bottom: var(--zxcn1o4);
  }
  ._1hx6zav83 {
    padding-bottom: var(--zxcn1o5);
  }
  ._1hx6zav87 {
    padding-bottom: var(--zxcn1o6);
  }
  ._1hx6zav8b {
    padding-bottom: var(--zxcn1o7);
  }
  ._1hx6zav8f {
    padding-bottom: var(--zxcn1o8);
  }
  ._1hx6zav8j {
    padding-bottom: 0;
  }
  ._1hx6zav8n {
    padding-right: var(--zxcn1o0);
  }
  ._1hx6zav8r {
    padding-right: var(--zxcn1o1);
  }
  ._1hx6zav8v {
    padding-right: var(--zxcn1o2);
  }
  ._1hx6zav8z {
    padding-right: var(--zxcn1o3);
  }
  ._1hx6zav93 {
    padding-right: var(--zxcn1o4);
  }
  ._1hx6zav97 {
    padding-right: var(--zxcn1o5);
  }
  ._1hx6zav9b {
    padding-right: var(--zxcn1o6);
  }
  ._1hx6zav9f {
    padding-right: var(--zxcn1o7);
  }
  ._1hx6zav9j {
    padding-right: var(--zxcn1o8);
  }
  ._1hx6zav9n {
    padding-right: 0;
  }
  ._1hx6zav9r {
    padding-left: var(--zxcn1o0);
  }
  ._1hx6zav9v {
    padding-left: var(--zxcn1o1);
  }
  ._1hx6zav9z {
    padding-left: var(--zxcn1o2);
  }
  ._1hx6zava3 {
    padding-left: var(--zxcn1o3);
  }
  ._1hx6zava7 {
    padding-left: var(--zxcn1o4);
  }
  ._1hx6zavab {
    padding-left: var(--zxcn1o5);
  }
  ._1hx6zavaf {
    padding-left: var(--zxcn1o6);
  }
  ._1hx6zavaj {
    padding-left: var(--zxcn1o7);
  }
  ._1hx6zavan {
    padding-left: var(--zxcn1o8);
  }
  ._1hx6zavar {
    padding-left: 0;
  }
  ._1hx6zavav {
    margin-top: var(--zxcn1o0);
  }
  ._1hx6zavaz {
    margin-top: var(--zxcn1o1);
  }
  ._1hx6zavb3 {
    margin-top: var(--zxcn1o2);
  }
  ._1hx6zavb7 {
    margin-top: var(--zxcn1o3);
  }
  ._1hx6zavbb {
    margin-top: var(--zxcn1o4);
  }
  ._1hx6zavbf {
    margin-top: var(--zxcn1o5);
  }
  ._1hx6zavbj {
    margin-top: var(--zxcn1o6);
  }
  ._1hx6zavbn {
    margin-top: var(--zxcn1o7);
  }
  ._1hx6zavbr {
    margin-top: var(--zxcn1o8);
  }
  ._1hx6zavbv {
    margin-top: 0;
  }
  ._1hx6zavbz {
    margin-bottom: var(--zxcn1o0);
  }
  ._1hx6zavc3 {
    margin-bottom: var(--zxcn1o1);
  }
  ._1hx6zavc7 {
    margin-bottom: var(--zxcn1o2);
  }
  ._1hx6zavcb {
    margin-bottom: var(--zxcn1o3);
  }
  ._1hx6zavcf {
    margin-bottom: var(--zxcn1o4);
  }
  ._1hx6zavcj {
    margin-bottom: var(--zxcn1o5);
  }
  ._1hx6zavcn {
    margin-bottom: var(--zxcn1o6);
  }
  ._1hx6zavcr {
    margin-bottom: var(--zxcn1o7);
  }
  ._1hx6zavcv {
    margin-bottom: var(--zxcn1o8);
  }
  ._1hx6zavcz {
    margin-bottom: 0;
  }
  ._1hx6zavd3 {
    margin-right: var(--zxcn1o0);
  }
  ._1hx6zavd7 {
    margin-right: var(--zxcn1o1);
  }
  ._1hx6zavdb {
    margin-right: var(--zxcn1o2);
  }
  ._1hx6zavdf {
    margin-right: var(--zxcn1o3);
  }
  ._1hx6zavdj {
    margin-right: var(--zxcn1o4);
  }
  ._1hx6zavdn {
    margin-right: var(--zxcn1o5);
  }
  ._1hx6zavdr {
    margin-right: var(--zxcn1o6);
  }
  ._1hx6zavdv {
    margin-right: var(--zxcn1o7);
  }
  ._1hx6zavdz {
    margin-right: var(--zxcn1o8);
  }
  ._1hx6zave3 {
    margin-right: 0;
  }
  ._1hx6zave7 {
    margin-left: var(--zxcn1o0);
  }
  ._1hx6zaveb {
    margin-left: var(--zxcn1o1);
  }
  ._1hx6zavef {
    margin-left: var(--zxcn1o2);
  }
  ._1hx6zavej {
    margin-left: var(--zxcn1o3);
  }
  ._1hx6zaven {
    margin-left: var(--zxcn1o4);
  }
  ._1hx6zaver {
    margin-left: var(--zxcn1o5);
  }
  ._1hx6zavev {
    margin-left: var(--zxcn1o6);
  }
  ._1hx6zavez {
    margin-left: var(--zxcn1o7);
  }
  ._1hx6zavf3 {
    margin-left: var(--zxcn1o8);
  }
  ._1hx6zavf7 {
    margin-left: 0;
  }
  ._1hx6zavfb {
    align-items: flex-start;
  }
  ._1hx6zavff {
    align-items: center;
  }
  ._1hx6zavfj {
    align-items: flex-end;
  }
  ._1hx6zavfn {
    justify-content: flex-start;
  }
  ._1hx6zavfr {
    justify-content: center;
  }
  ._1hx6zavfv {
    justify-content: flex-end;
  }
  ._1hx6zavfz {
    justify-content: space-between;
  }
  ._1hx6zavg3 {
    flex-direction: row;
  }
  ._1hx6zavg7 {
    flex-direction: row-reverse;
  }
  ._1hx6zavgb {
    flex-direction: column;
  }
  ._1hx6zavgf {
    flex-direction: column-reverse;
  }
  ._1hx6zavgj {
    flex-wrap: wrap;
  }
  ._1hx6zavgn {
    flex-wrap: nowrap;
  }
  ._1hx6zavgr {
    flex-shrink: 0;
  }
  ._1hx6zavgv {
    flex-grow: 0;
  }
  ._1hx6zavgz {
    flex-grow: 1;
  }
  ._1hx6zavh3 {
    text-align: left;
  }
  ._1hx6zavh7 {
    text-align: center;
  }
  ._1hx6zavhb {
    text-align: right;
  }
}
@media screen and (min-width: 992px) {
  ._1hx6zav4w {
    display: none;
  }
  ._1hx6zav50 {
    display: block;
  }
  ._1hx6zav54 {
    display: inline;
  }
  ._1hx6zav58 {
    display: inline-block;
  }
  ._1hx6zav5c {
    display: flex;
  }
  ._1hx6zav5g {
    position: relative;
  }
  ._1hx6zav5k {
    position: absolute;
  }
  ._1hx6zav5o {
    position: fixed;
  }
  ._1hx6zav5s {
    border-radius: 0;
  }
  ._1hx6zav5w {
    border-radius: 9999px;
  }
  ._1hx6zav60 {
    border-radius: var(--zxcn1ob);
  }
  ._1hx6zav64 {
    border-radius: var(--zxcn1oc);
  }
  ._1hx6zav68 {
    border-radius: var(--zxcn1od);
  }
  ._1hx6zav6c {
    border-radius: var(--zxcn1oe);
  }
  ._1hx6zav6g {
    padding-top: var(--zxcn1o0);
  }
  ._1hx6zav6k {
    padding-top: var(--zxcn1o1);
  }
  ._1hx6zav6o {
    padding-top: var(--zxcn1o2);
  }
  ._1hx6zav6s {
    padding-top: var(--zxcn1o3);
  }
  ._1hx6zav6w {
    padding-top: var(--zxcn1o4);
  }
  ._1hx6zav70 {
    padding-top: var(--zxcn1o5);
  }
  ._1hx6zav74 {
    padding-top: var(--zxcn1o6);
  }
  ._1hx6zav78 {
    padding-top: var(--zxcn1o7);
  }
  ._1hx6zav7c {
    padding-top: var(--zxcn1o8);
  }
  ._1hx6zav7g {
    padding-top: 0;
  }
  ._1hx6zav7k {
    padding-bottom: var(--zxcn1o0);
  }
  ._1hx6zav7o {
    padding-bottom: var(--zxcn1o1);
  }
  ._1hx6zav7s {
    padding-bottom: var(--zxcn1o2);
  }
  ._1hx6zav7w {
    padding-bottom: var(--zxcn1o3);
  }
  ._1hx6zav80 {
    padding-bottom: var(--zxcn1o4);
  }
  ._1hx6zav84 {
    padding-bottom: var(--zxcn1o5);
  }
  ._1hx6zav88 {
    padding-bottom: var(--zxcn1o6);
  }
  ._1hx6zav8c {
    padding-bottom: var(--zxcn1o7);
  }
  ._1hx6zav8g {
    padding-bottom: var(--zxcn1o8);
  }
  ._1hx6zav8k {
    padding-bottom: 0;
  }
  ._1hx6zav8o {
    padding-right: var(--zxcn1o0);
  }
  ._1hx6zav8s {
    padding-right: var(--zxcn1o1);
  }
  ._1hx6zav8w {
    padding-right: var(--zxcn1o2);
  }
  ._1hx6zav90 {
    padding-right: var(--zxcn1o3);
  }
  ._1hx6zav94 {
    padding-right: var(--zxcn1o4);
  }
  ._1hx6zav98 {
    padding-right: var(--zxcn1o5);
  }
  ._1hx6zav9c {
    padding-right: var(--zxcn1o6);
  }
  ._1hx6zav9g {
    padding-right: var(--zxcn1o7);
  }
  ._1hx6zav9k {
    padding-right: var(--zxcn1o8);
  }
  ._1hx6zav9o {
    padding-right: 0;
  }
  ._1hx6zav9s {
    padding-left: var(--zxcn1o0);
  }
  ._1hx6zav9w {
    padding-left: var(--zxcn1o1);
  }
  ._1hx6zava0 {
    padding-left: var(--zxcn1o2);
  }
  ._1hx6zava4 {
    padding-left: var(--zxcn1o3);
  }
  ._1hx6zava8 {
    padding-left: var(--zxcn1o4);
  }
  ._1hx6zavac {
    padding-left: var(--zxcn1o5);
  }
  ._1hx6zavag {
    padding-left: var(--zxcn1o6);
  }
  ._1hx6zavak {
    padding-left: var(--zxcn1o7);
  }
  ._1hx6zavao {
    padding-left: var(--zxcn1o8);
  }
  ._1hx6zavas {
    padding-left: 0;
  }
  ._1hx6zavaw {
    margin-top: var(--zxcn1o0);
  }
  ._1hx6zavb0 {
    margin-top: var(--zxcn1o1);
  }
  ._1hx6zavb4 {
    margin-top: var(--zxcn1o2);
  }
  ._1hx6zavb8 {
    margin-top: var(--zxcn1o3);
  }
  ._1hx6zavbc {
    margin-top: var(--zxcn1o4);
  }
  ._1hx6zavbg {
    margin-top: var(--zxcn1o5);
  }
  ._1hx6zavbk {
    margin-top: var(--zxcn1o6);
  }
  ._1hx6zavbo {
    margin-top: var(--zxcn1o7);
  }
  ._1hx6zavbs {
    margin-top: var(--zxcn1o8);
  }
  ._1hx6zavbw {
    margin-top: 0;
  }
  ._1hx6zavc0 {
    margin-bottom: var(--zxcn1o0);
  }
  ._1hx6zavc4 {
    margin-bottom: var(--zxcn1o1);
  }
  ._1hx6zavc8 {
    margin-bottom: var(--zxcn1o2);
  }
  ._1hx6zavcc {
    margin-bottom: var(--zxcn1o3);
  }
  ._1hx6zavcg {
    margin-bottom: var(--zxcn1o4);
  }
  ._1hx6zavck {
    margin-bottom: var(--zxcn1o5);
  }
  ._1hx6zavco {
    margin-bottom: var(--zxcn1o6);
  }
  ._1hx6zavcs {
    margin-bottom: var(--zxcn1o7);
  }
  ._1hx6zavcw {
    margin-bottom: var(--zxcn1o8);
  }
  ._1hx6zavd0 {
    margin-bottom: 0;
  }
  ._1hx6zavd4 {
    margin-right: var(--zxcn1o0);
  }
  ._1hx6zavd8 {
    margin-right: var(--zxcn1o1);
  }
  ._1hx6zavdc {
    margin-right: var(--zxcn1o2);
  }
  ._1hx6zavdg {
    margin-right: var(--zxcn1o3);
  }
  ._1hx6zavdk {
    margin-right: var(--zxcn1o4);
  }
  ._1hx6zavdo {
    margin-right: var(--zxcn1o5);
  }
  ._1hx6zavds {
    margin-right: var(--zxcn1o6);
  }
  ._1hx6zavdw {
    margin-right: var(--zxcn1o7);
  }
  ._1hx6zave0 {
    margin-right: var(--zxcn1o8);
  }
  ._1hx6zave4 {
    margin-right: 0;
  }
  ._1hx6zave8 {
    margin-left: var(--zxcn1o0);
  }
  ._1hx6zavec {
    margin-left: var(--zxcn1o1);
  }
  ._1hx6zaveg {
    margin-left: var(--zxcn1o2);
  }
  ._1hx6zavek {
    margin-left: var(--zxcn1o3);
  }
  ._1hx6zaveo {
    margin-left: var(--zxcn1o4);
  }
  ._1hx6zaves {
    margin-left: var(--zxcn1o5);
  }
  ._1hx6zavew {
    margin-left: var(--zxcn1o6);
  }
  ._1hx6zavf0 {
    margin-left: var(--zxcn1o7);
  }
  ._1hx6zavf4 {
    margin-left: var(--zxcn1o8);
  }
  ._1hx6zavf8 {
    margin-left: 0;
  }
  ._1hx6zavfc {
    align-items: flex-start;
  }
  ._1hx6zavfg {
    align-items: center;
  }
  ._1hx6zavfk {
    align-items: flex-end;
  }
  ._1hx6zavfo {
    justify-content: flex-start;
  }
  ._1hx6zavfs {
    justify-content: center;
  }
  ._1hx6zavfw {
    justify-content: flex-end;
  }
  ._1hx6zavg0 {
    justify-content: space-between;
  }
  ._1hx6zavg4 {
    flex-direction: row;
  }
  ._1hx6zavg8 {
    flex-direction: row-reverse;
  }
  ._1hx6zavgc {
    flex-direction: column;
  }
  ._1hx6zavgg {
    flex-direction: column-reverse;
  }
  ._1hx6zavgk {
    flex-wrap: wrap;
  }
  ._1hx6zavgo {
    flex-wrap: nowrap;
  }
  ._1hx6zavgs {
    flex-shrink: 0;
  }
  ._1hx6zavgw {
    flex-grow: 0;
  }
  ._1hx6zavh0 {
    flex-grow: 1;
  }
  ._1hx6zavh4 {
    text-align: left;
  }
  ._1hx6zavh8 {
    text-align: center;
  }
  ._1hx6zavhc {
    text-align: right;
  }
}
@media screen and (min-width: 1200px) {
  ._1hx6zav4x {
    display: none;
  }
  ._1hx6zav51 {
    display: block;
  }
  ._1hx6zav55 {
    display: inline;
  }
  ._1hx6zav59 {
    display: inline-block;
  }
  ._1hx6zav5d {
    display: flex;
  }
  ._1hx6zav5h {
    position: relative;
  }
  ._1hx6zav5l {
    position: absolute;
  }
  ._1hx6zav5p {
    position: fixed;
  }
  ._1hx6zav5t {
    border-radius: 0;
  }
  ._1hx6zav5x {
    border-radius: 9999px;
  }
  ._1hx6zav61 {
    border-radius: var(--zxcn1ob);
  }
  ._1hx6zav65 {
    border-radius: var(--zxcn1oc);
  }
  ._1hx6zav69 {
    border-radius: var(--zxcn1od);
  }
  ._1hx6zav6d {
    border-radius: var(--zxcn1oe);
  }
  ._1hx6zav6h {
    padding-top: var(--zxcn1o0);
  }
  ._1hx6zav6l {
    padding-top: var(--zxcn1o1);
  }
  ._1hx6zav6p {
    padding-top: var(--zxcn1o2);
  }
  ._1hx6zav6t {
    padding-top: var(--zxcn1o3);
  }
  ._1hx6zav6x {
    padding-top: var(--zxcn1o4);
  }
  ._1hx6zav71 {
    padding-top: var(--zxcn1o5);
  }
  ._1hx6zav75 {
    padding-top: var(--zxcn1o6);
  }
  ._1hx6zav79 {
    padding-top: var(--zxcn1o7);
  }
  ._1hx6zav7d {
    padding-top: var(--zxcn1o8);
  }
  ._1hx6zav7h {
    padding-top: 0;
  }
  ._1hx6zav7l {
    padding-bottom: var(--zxcn1o0);
  }
  ._1hx6zav7p {
    padding-bottom: var(--zxcn1o1);
  }
  ._1hx6zav7t {
    padding-bottom: var(--zxcn1o2);
  }
  ._1hx6zav7x {
    padding-bottom: var(--zxcn1o3);
  }
  ._1hx6zav81 {
    padding-bottom: var(--zxcn1o4);
  }
  ._1hx6zav85 {
    padding-bottom: var(--zxcn1o5);
  }
  ._1hx6zav89 {
    padding-bottom: var(--zxcn1o6);
  }
  ._1hx6zav8d {
    padding-bottom: var(--zxcn1o7);
  }
  ._1hx6zav8h {
    padding-bottom: var(--zxcn1o8);
  }
  ._1hx6zav8l {
    padding-bottom: 0;
  }
  ._1hx6zav8p {
    padding-right: var(--zxcn1o0);
  }
  ._1hx6zav8t {
    padding-right: var(--zxcn1o1);
  }
  ._1hx6zav8x {
    padding-right: var(--zxcn1o2);
  }
  ._1hx6zav91 {
    padding-right: var(--zxcn1o3);
  }
  ._1hx6zav95 {
    padding-right: var(--zxcn1o4);
  }
  ._1hx6zav99 {
    padding-right: var(--zxcn1o5);
  }
  ._1hx6zav9d {
    padding-right: var(--zxcn1o6);
  }
  ._1hx6zav9h {
    padding-right: var(--zxcn1o7);
  }
  ._1hx6zav9l {
    padding-right: var(--zxcn1o8);
  }
  ._1hx6zav9p {
    padding-right: 0;
  }
  ._1hx6zav9t {
    padding-left: var(--zxcn1o0);
  }
  ._1hx6zav9x {
    padding-left: var(--zxcn1o1);
  }
  ._1hx6zava1 {
    padding-left: var(--zxcn1o2);
  }
  ._1hx6zava5 {
    padding-left: var(--zxcn1o3);
  }
  ._1hx6zava9 {
    padding-left: var(--zxcn1o4);
  }
  ._1hx6zavad {
    padding-left: var(--zxcn1o5);
  }
  ._1hx6zavah {
    padding-left: var(--zxcn1o6);
  }
  ._1hx6zaval {
    padding-left: var(--zxcn1o7);
  }
  ._1hx6zavap {
    padding-left: var(--zxcn1o8);
  }
  ._1hx6zavat {
    padding-left: 0;
  }
  ._1hx6zavax {
    margin-top: var(--zxcn1o0);
  }
  ._1hx6zavb1 {
    margin-top: var(--zxcn1o1);
  }
  ._1hx6zavb5 {
    margin-top: var(--zxcn1o2);
  }
  ._1hx6zavb9 {
    margin-top: var(--zxcn1o3);
  }
  ._1hx6zavbd {
    margin-top: var(--zxcn1o4);
  }
  ._1hx6zavbh {
    margin-top: var(--zxcn1o5);
  }
  ._1hx6zavbl {
    margin-top: var(--zxcn1o6);
  }
  ._1hx6zavbp {
    margin-top: var(--zxcn1o7);
  }
  ._1hx6zavbt {
    margin-top: var(--zxcn1o8);
  }
  ._1hx6zavbx {
    margin-top: 0;
  }
  ._1hx6zavc1 {
    margin-bottom: var(--zxcn1o0);
  }
  ._1hx6zavc5 {
    margin-bottom: var(--zxcn1o1);
  }
  ._1hx6zavc9 {
    margin-bottom: var(--zxcn1o2);
  }
  ._1hx6zavcd {
    margin-bottom: var(--zxcn1o3);
  }
  ._1hx6zavch {
    margin-bottom: var(--zxcn1o4);
  }
  ._1hx6zavcl {
    margin-bottom: var(--zxcn1o5);
  }
  ._1hx6zavcp {
    margin-bottom: var(--zxcn1o6);
  }
  ._1hx6zavct {
    margin-bottom: var(--zxcn1o7);
  }
  ._1hx6zavcx {
    margin-bottom: var(--zxcn1o8);
  }
  ._1hx6zavd1 {
    margin-bottom: 0;
  }
  ._1hx6zavd5 {
    margin-right: var(--zxcn1o0);
  }
  ._1hx6zavd9 {
    margin-right: var(--zxcn1o1);
  }
  ._1hx6zavdd {
    margin-right: var(--zxcn1o2);
  }
  ._1hx6zavdh {
    margin-right: var(--zxcn1o3);
  }
  ._1hx6zavdl {
    margin-right: var(--zxcn1o4);
  }
  ._1hx6zavdp {
    margin-right: var(--zxcn1o5);
  }
  ._1hx6zavdt {
    margin-right: var(--zxcn1o6);
  }
  ._1hx6zavdx {
    margin-right: var(--zxcn1o7);
  }
  ._1hx6zave1 {
    margin-right: var(--zxcn1o8);
  }
  ._1hx6zave5 {
    margin-right: 0;
  }
  ._1hx6zave9 {
    margin-left: var(--zxcn1o0);
  }
  ._1hx6zaved {
    margin-left: var(--zxcn1o1);
  }
  ._1hx6zaveh {
    margin-left: var(--zxcn1o2);
  }
  ._1hx6zavel {
    margin-left: var(--zxcn1o3);
  }
  ._1hx6zavep {
    margin-left: var(--zxcn1o4);
  }
  ._1hx6zavet {
    margin-left: var(--zxcn1o5);
  }
  ._1hx6zavex {
    margin-left: var(--zxcn1o6);
  }
  ._1hx6zavf1 {
    margin-left: var(--zxcn1o7);
  }
  ._1hx6zavf5 {
    margin-left: var(--zxcn1o8);
  }
  ._1hx6zavf9 {
    margin-left: 0;
  }
  ._1hx6zavfd {
    align-items: flex-start;
  }
  ._1hx6zavfh {
    align-items: center;
  }
  ._1hx6zavfl {
    align-items: flex-end;
  }
  ._1hx6zavfp {
    justify-content: flex-start;
  }
  ._1hx6zavft {
    justify-content: center;
  }
  ._1hx6zavfx {
    justify-content: flex-end;
  }
  ._1hx6zavg1 {
    justify-content: space-between;
  }
  ._1hx6zavg5 {
    flex-direction: row;
  }
  ._1hx6zavg9 {
    flex-direction: row-reverse;
  }
  ._1hx6zavgd {
    flex-direction: column;
  }
  ._1hx6zavgh {
    flex-direction: column-reverse;
  }
  ._1hx6zavgl {
    flex-wrap: wrap;
  }
  ._1hx6zavgp {
    flex-wrap: nowrap;
  }
  ._1hx6zavgt {
    flex-shrink: 0;
  }
  ._1hx6zavgx {
    flex-grow: 0;
  }
  ._1hx6zavh1 {
    flex-grow: 1;
  }
  ._1hx6zavh5 {
    text-align: left;
  }
  ._1hx6zavh9 {
    text-align: center;
  }
  ._1hx6zavhd {
    text-align: right;
  }
}
.m3vcy34 {
  font-size: var(--m3vcy30);
  line-height: var(--m3vcy31);
}
.m3vcy34:before {
  content: "";
  display: table;
  margin-bottom: var(--m3vcy32);
}
.m3vcy34:after {
  content: "";
  display: table;
  margin-top: var(--m3vcy33);
}
.yi595p0 {
  font-family: var(--zxcn1o2w);
}
.yi595p1 {
  font-weight: var(--zxcn1o46);
}
.yi595p2 {
  font-weight: var(--zxcn1o47);
}
.yi595p3 {
  font-weight: var(--zxcn1o48);
}
.yi595p4 {
  --m3vcy30: var(--zxcn1o32);
  --m3vcy31: var(--zxcn1o33);
  --m3vcy32: var(--zxcn1o35);
  --m3vcy33: var(--zxcn1o36);
}
.yi595p7 {
  --m3vcy30: var(--zxcn1o3c);
  --m3vcy31: var(--zxcn1o3d);
  --m3vcy32: var(--zxcn1o3f);
  --m3vcy33: var(--zxcn1o3g);
}
.yi595pa {
  --m3vcy30: var(--zxcn1o3m);
  --m3vcy31: var(--zxcn1o3n);
  --m3vcy32: var(--zxcn1o3p);
  --m3vcy33: var(--zxcn1o3q);
}
.yi595pd {
  --m3vcy30: var(--zxcn1o3w);
  --m3vcy31: var(--zxcn1o3x);
  --m3vcy32: var(--zxcn1o3z);
  --m3vcy33: var(--zxcn1o40);
}
.yi595pg {
  font-size: var(--zxcn1o32);
  line-height: var(--zxcn1o33);
}
.yi595ph {
  font-size: var(--zxcn1o3c);
  line-height: var(--zxcn1o3d);
}
.yi595pi {
  font-size: var(--zxcn1o3m);
  line-height: var(--zxcn1o3n);
}
.yi595pj {
  font-size: var(--zxcn1o3w);
  line-height: var(--zxcn1o3x);
}
.yi595pk {
  font-weight: var(--zxcn1o5d);
}
.yi595pl {
  font-weight: var(--zxcn1o5e);
}
.yi595pm {
  --m3vcy30: var(--zxcn1o49);
  --m3vcy31: var(--zxcn1o4a);
  --m3vcy32: var(--zxcn1o4c);
  --m3vcy33: var(--zxcn1o4d);
}
.yi595pp {
  --m3vcy30: var(--zxcn1o4j);
  --m3vcy31: var(--zxcn1o4k);
  --m3vcy32: var(--zxcn1o4m);
  --m3vcy33: var(--zxcn1o4n);
}
.yi595ps {
  --m3vcy30: var(--zxcn1o4t);
  --m3vcy31: var(--zxcn1o4u);
  --m3vcy32: var(--zxcn1o4w);
  --m3vcy33: var(--zxcn1o4x);
}
.yi595pv {
  --m3vcy30: var(--zxcn1o53);
  --m3vcy31: var(--zxcn1o54);
  --m3vcy32: var(--zxcn1o56);
  --m3vcy33: var(--zxcn1o57);
}
html:not(._1hx6zavz) .yi595p18 {
  --yi595py: var(--zxcn1o19);
  --yi595pz: var(--zxcn1o17);
  --yi595p10: var(--zxcn1o1d);
  --yi595p11: var(--zxcn1o1o);
  --yi595p12: var(--zxcn1o1m);
  --yi595p13: var(--zxcn1o15);
  --yi595p14: var(--zxcn1o1b);
  --yi595p15: var(--zxcn1o1k);
  --yi595p16: var(--zxcn1o1r);
  --yi595p17: var(--zxcn1o1f);
}
html:not(._1hx6zavz) .yi595p19 {
  --yi595py: var(--zxcn1o1a);
  --yi595pz: var(--zxcn1o18);
  --yi595p10: var(--zxcn1o1e);
  --yi595p11: var(--zxcn1o1p);
  --yi595p12: var(--zxcn1o1n);
  --yi595p13: var(--zxcn1o16);
  --yi595p14: var(--zxcn1o1c);
  --yi595p15: var(--zxcn1o1l);
  --yi595p16: var(--zxcn1o1s);
  --yi595p17: var(--zxcn1o1h);
}
html._1hx6zavz .yi595p1a {
  --yi595py: var(--zxcn1o19);
  --yi595pz: var(--zxcn1o17);
  --yi595p10: var(--zxcn1o1d);
  --yi595p11: var(--zxcn1o1o);
  --yi595p12: var(--zxcn1o1m);
  --yi595p13: var(--zxcn1o15);
  --yi595p14: var(--zxcn1o1b);
  --yi595p15: var(--zxcn1o1k);
  --yi595p16: var(--zxcn1o1r);
  --yi595p17: var(--zxcn1o1f);
}
html._1hx6zavz .yi595p1b {
  --yi595py: var(--zxcn1o1a);
  --yi595pz: var(--zxcn1o18);
  --yi595p10: var(--zxcn1o1e);
  --yi595p11: var(--zxcn1o1p);
  --yi595p12: var(--zxcn1o1n);
  --yi595p13: var(--zxcn1o16);
  --yi595p14: var(--zxcn1o1c);
  --yi595p15: var(--zxcn1o1l);
  --yi595p16: var(--zxcn1o1s);
  --yi595p17: var(--zxcn1o1h);
}
html:not(._1hx6zavz) .yi595p1c,
html:not(._1hx6zavz) .yi595p1d,
html:not(._1hx6zavz) .yi595p1e,
html:not(._1hx6zavz) .yi595p1f {
  --yi595p15: var(--yi595py);
}
html:not(._1hx6zavz) .yi595p1g,
html:not(._1hx6zavz) .yi595p1h {
  --yi595p15: var(--yi595pz);
}
html:not(._1hx6zavz) .yi595p1i {
  --yi595p15: var(--yi595p12);
}
html:not(._1hx6zavz) .yi595p1j {
  --yi595p15: var(--yi595p10);
}
html:not(._1hx6zavz) .yi595p1k {
  --yi595p15: var(--yi595p11);
}
html._1hx6zavz .yi595p1l,
html._1hx6zavz .yi595p1m,
html._1hx6zavz .yi595p1n,
html._1hx6zavz .yi595p1o {
  --yi595p15: var(--yi595py);
}
html._1hx6zavz .yi595p1p,
html._1hx6zavz .yi595p1q {
  --yi595p15: var(--yi595pz);
}
html._1hx6zavz .yi595p1r {
  --yi595p15: var(--yi595p12);
}
html._1hx6zavz .yi595p1s {
  --yi595p15: var(--yi595p10);
}
html._1hx6zavz .yi595p1t {
  --yi595p15: var(--yi595p11);
}
.yi595p1u {
  color: var(--yi595py);
}
.yi595p1v {
  color: var(--yi595pz);
}
.yi595p1w {
  color: var(--yi595p10);
}
.yi595p1x {
  color: var(--yi595p11);
}
.yi595p1y {
  color: var(--yi595p12);
}
.yi595p1z {
  color: var(--yi595p13);
}
.yi595p20 {
  color: var(--yi595p14);
}
.yi595p21 {
  color: var(--yi595p15);
}
.yi595p22 {
  color: var(--yi595p16);
}
.yi595p23 {
  color: var(--yi595p17);
}
.yi595p24 {
  padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o33)) / 2);
  padding-top: calc((var(--zxcn1o9) - var(--zxcn1o33)) / 2);
}
.yi595p25 {
  padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o3d)) / 2);
  padding-top: calc((var(--zxcn1o9) - var(--zxcn1o3d)) / 2);
}
.yi595p26 {
  padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o3n)) / 2);
  padding-top: calc((var(--zxcn1o9) - var(--zxcn1o3n)) / 2);
}
.yi595p27 {
  padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o3x)) / 2);
  padding-top: calc((var(--zxcn1o9) - var(--zxcn1o3x)) / 2);
}
@media screen and (min-width: 740px) {
  .yi595p4 {
    --m3vcy30: var(--zxcn1o37);
    --m3vcy31: var(--zxcn1o38);
    --m3vcy32: var(--zxcn1o3a);
    --m3vcy33: var(--zxcn1o3b);
  }
  .yi595p7 {
    --m3vcy30: var(--zxcn1o3h);
    --m3vcy31: var(--zxcn1o3i);
    --m3vcy32: var(--zxcn1o3k);
    --m3vcy33: var(--zxcn1o3l);
  }
  .yi595pa {
    --m3vcy30: var(--zxcn1o3r);
    --m3vcy31: var(--zxcn1o3s);
    --m3vcy32: var(--zxcn1o3u);
    --m3vcy33: var(--zxcn1o3v);
  }
  .yi595pd {
    --m3vcy30: var(--zxcn1o41);
    --m3vcy31: var(--zxcn1o42);
    --m3vcy32: var(--zxcn1o44);
    --m3vcy33: var(--zxcn1o45);
  }
  .yi595pg {
    font-size: var(--zxcn1o37);
    line-height: var(--zxcn1o38);
  }
  .yi595ph {
    font-size: var(--zxcn1o3h);
    line-height: var(--zxcn1o3i);
  }
  .yi595pi {
    font-size: var(--zxcn1o3r);
    line-height: var(--zxcn1o3s);
  }
  .yi595pj {
    font-size: var(--zxcn1o41);
    line-height: var(--zxcn1o42);
  }
  .yi595pm {
    --m3vcy30: var(--zxcn1o4e);
    --m3vcy31: var(--zxcn1o4f);
    --m3vcy32: var(--zxcn1o4h);
    --m3vcy33: var(--zxcn1o4i);
  }
  .yi595pp {
    --m3vcy30: var(--zxcn1o4o);
    --m3vcy31: var(--zxcn1o4p);
    --m3vcy32: var(--zxcn1o4r);
    --m3vcy33: var(--zxcn1o4s);
  }
  .yi595ps {
    --m3vcy30: var(--zxcn1o4y);
    --m3vcy31: var(--zxcn1o4z);
    --m3vcy32: var(--zxcn1o51);
    --m3vcy33: var(--zxcn1o52);
  }
  .yi595pv {
    --m3vcy30: var(--zxcn1o58);
    --m3vcy31: var(--zxcn1o59);
    --m3vcy32: var(--zxcn1o5b);
    --m3vcy33: var(--zxcn1o5c);
  }
  .yi595p24 {
    padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o38)) / 2);
    padding-top: calc((var(--zxcn1o9) - var(--zxcn1o38)) / 2);
  }
  .yi595p25 {
    padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o3i)) / 2);
    padding-top: calc((var(--zxcn1o9) - var(--zxcn1o3i)) / 2);
  }
  .yi595p26 {
    padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o3s)) / 2);
    padding-top: calc((var(--zxcn1o9) - var(--zxcn1o3s)) / 2);
  }
  .yi595p27 {
    padding-bottom: calc((var(--zxcn1o9) - var(--zxcn1o42)) / 2);
    padding-top: calc((var(--zxcn1o9) - var(--zxcn1o42)) / 2);
  }
}
._1wfo4vb0 {
  --zxcn1o0: 24px;
  --zxcn1o1: 4px;
  --zxcn1o2: 8px;
  --zxcn1o3: 12px;
  --zxcn1o4: 20px;
  --zxcn1o5: 32px;
  --zxcn1o6: 48px;
  --zxcn1o7: 96px;
  --zxcn1o8: 120px;
  --zxcn1o9: 44px;
  --zxcn1oa: 4px;
  --zxcn1ob: 2px;
  --zxcn1oc: 4px;
  --zxcn1od: 6px;
  --zxcn1oe: 10px;
  --zxcn1of: #e60278;
  --zxcn1og: #f8b1dc;
  --zxcn1oh: #fdc221;
  --zxcn1oi: #fee384;
  --zxcn1oj: #b91e1e;
  --zxcn1ok: #fb999a;
  --zxcn1ol: #838fa5;
  --zxcn1om: rgba(159, 176, 245, 0.7);
  --zxcn1on: #4964e9;
  --zxcn1oo: #9fb0f5;
  --zxcn1op: #1d559d;
  --zxcn1oq: #98c9f1;
  --zxcn1or: #2e3849;
  --zxcn1ot: #d2d7df;
  --zxcn1os: #fff;
  --zxcn1ou: #12784f;
  --zxcn1ov: #8bdec5;
  --zxcn1ow: #512eaa;
  --zxcn1ox: #c6acf5;
  --zxcn1oy: 1px;
  --zxcn1oz: 2px;
  --zxcn1o10: 3px;
  --zxcn1o11: 400px;
  --zxcn1o12: 660px;
  --zxcn1o13: 940px;
  --zxcn1o14: 1280px;
  --zxcn1o15: #e60278;
  --zxcn1o16: #f8b1dc;
  --zxcn1o17: #723d02;
  --zxcn1o18: #fee384;
  --zxcn1o19: #b91e1e;
  --zxcn1o1a: #fb999a;
  --zxcn1o1b: #4964e9;
  --zxcn1o1c: #9fb0f5;
  --zxcn1o1d: #1d559d;
  --zxcn1o1e: #98c9f1;
  --zxcn1o1f: #4964e9;
  --zxcn1o1h: #9fb0f5;
  --zxcn1o1g: #4964e9;
  --zxcn1o1i: #512eaa;
  --zxcn1o1j: #c6acf5;
  --zxcn1o1k: #2e3849;
  --zxcn1o1l: #fff;
  --zxcn1o1m: #12784f;
  --zxcn1o1n: #8bdec5;
  --zxcn1o1o: #512eaa;
  --zxcn1o1p: #c6acf5;
  --zxcn1o1q: #f57c00;
  --zxcn1o1r: #5a6881;
  --zxcn1o1s: hsla(0, 0%, 100%, 0.65);
  --zxcn1o1t: #f7f8fb;
  --zxcn1o1u: #0e131b;
  --zxcn1o1v: #0d3880;
  --zxcn1o1w: #e60278;
  --zxcn1o1x: #cd026b;
  --zxcn1o1y: #fd0585;
  --zxcn1o1z: #feeffa;
  --zxcn1o20: #fdd7f3;
  --zxcn1o21: #fde3f6;
  --zxcn1o22: #fdc221;
  --zxcn1o23: #fef8de;
  --zxcn1o24: #b91e1e;
  --zxcn1o25: #a31a1a;
  --zxcn1o26: #db1616;
  --zxcn1o27: #ffe3e2;
  --zxcn1o28: #fef3f3;
  --zxcn1o29: #fcdbdb;
  --zxcn1o2a: #fde7e7;
  --zxcn1o2b: #4964e9;
  --zxcn1o2c: #3251e6;
  --zxcn1o2d: #5975ff;
  --zxcn1o2e: #f4f6fe;
  --zxcn1o2f: #dde3fc;
  --zxcn1o2g: #e8ecfd;
  --zxcn1o2h: #1d559d;
  --zxcn1o2i: #e3f2fb;
  --zxcn1o2j: #2e3849;
  --zxcn1o2k: #242c39;
  --zxcn1o2l: #384459;
  --zxcn1o2m: #eaecf1;
  --zxcn1o2n: #f7f8fb;
  --zxcn1o2o: #e6e9f3;
  --zxcn1o2p: #eff1f7;
  --zxcn1o2q: #12784f;
  --zxcn1o2r: #e2f7f1;
  --zxcn1o2s: #512eaa;
  --zxcn1o2t: #f1e8fd;
  --zxcn1o2u: #fff;
  --zxcn1o2v: #1c2330;
  --zxcn1o2w: Roboto, "Helvetica Neue", HelveticaNeue, Helvetica, Arial,
    sans-serif;
  --zxcn1o2x: 1456;
  --zxcn1o2y: 1900;
  --zxcn1o2z: -500;
  --zxcn1o30: 0;
  --zxcn1o31: 2048;
  --zxcn1o32: 12px;
  --zxcn1o33: 20px;
  --zxcn1o34: 8.5313px;
  --zxcn1o35: -0.4642em;
  --zxcn1o36: -0.4915em;
  --zxcn1o37: 12px;
  --zxcn1o38: 20px;
  --zxcn1o39: 8.5313px;
  --zxcn1o3a: -0.4642em;
  --zxcn1o3b: -0.4915em;
  --zxcn1o3c: 14px;
  --zxcn1o3d: 20px;
  --zxcn1o3e: 9.9531px;
  --zxcn1o3f: -0.3451em;
  --zxcn1o3g: -0.3725em;
  --zxcn1o3h: 14px;
  --zxcn1o3i: 20px;
  --zxcn1o3j: 9.9531px;
  --zxcn1o3k: -0.3451em;
  --zxcn1o3l: -0.3725em;
  --zxcn1o3m: 16px;
  --zxcn1o3n: 24px;
  --zxcn1o3o: 11.375px;
  --zxcn1o3p: -0.3809em;
  --zxcn1o3q: -0.4082em;
  --zxcn1o3r: 16px;
  --zxcn1o3s: 24px;
  --zxcn1o3t: 11.375px;
  --zxcn1o3u: -0.3809em;
  --zxcn1o3v: -0.4082em;
  --zxcn1o3w: 18px;
  --zxcn1o3x: 28px;
  --zxcn1o3y: 12.7969px;
  --zxcn1o3z: -0.4086em;
  --zxcn1o40: -0.436em;
  --zxcn1o41: 18px;
  --zxcn1o42: 28px;
  --zxcn1o43: 12.7969px;
  --zxcn1o44: -0.4086em;
  --zxcn1o45: -0.436em;
  --zxcn1o46: 400;
  --zxcn1o47: 600;
  --zxcn1o48: 700;
  --zxcn1o49: 28px;
  --zxcn1o4a: 36px;
  --zxcn1o4b: 19.9063px;
  --zxcn1o4c: -0.2737em;
  --zxcn1o4d: -0.3011em;
  --zxcn1o4e: 42px;
  --zxcn1o4f: 44px;
  --zxcn1o4g: 29.8594px;
  --zxcn1o4h: -0.1547em;
  --zxcn1o4i: -0.182em;
  --zxcn1o4j: 21px;
  --zxcn1o4k: 32px;
  --zxcn1o4l: 14.9297px;
  --zxcn1o4m: -0.3928em;
  --zxcn1o4n: -0.4201em;
  --zxcn1o4o: 28px;
  --zxcn1o4p: 36px;
  --zxcn1o4q: 19.9063px;
  --zxcn1o4r: -0.2737em;
  --zxcn1o4s: -0.3011em;
  --zxcn1o4t: 21px;
  --zxcn1o4u: 28px;
  --zxcn1o4v: 14.9297px;
  --zxcn1o4w: -0.2975em;
  --zxcn1o4x: -0.3249em;
  --zxcn1o4y: 21px;
  --zxcn1o4z: 28px;
  --zxcn1o50: 14.9297px;
  --zxcn1o51: -0.2975em;
  --zxcn1o52: -0.3249em;
  --zxcn1o53: 18px;
  --zxcn1o54: 28px;
  --zxcn1o55: 12.7969px;
  --zxcn1o56: -0.4086em;
  --zxcn1o57: -0.436em;
  --zxcn1o58: 18px;
  --zxcn1o59: 28px;
  --zxcn1o5a: 12.7969px;
  --zxcn1o5b: -0.4086em;
  --zxcn1o5c: -0.436em;
  --zxcn1o5d: 400;
  --zxcn1o5e: 600;
  --zxcn1o5f: none;
  --zxcn1o5g: 24px;
  --zxcn1o5h: 20px;
  --zxcn1o5i: transform 0.125s ease, opacity 0.125s ease;
  --zxcn1o5j: transform 0.2s cubic-bezier(0.02, 1.505, 0.745, 1.235);
  --zxcn1o5k: scale(0.95);
  --zxcn1o5l: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 2px 2px -2px rgba(28, 35, 48, 0.1), 0 4px 4px -4px rgba(28, 35, 48, 0.2);
  --zxcn1o5m: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 8px 8px -4px rgba(28, 35, 48, 0.1), 0 12px 12px -8px rgba(28, 35, 48, 0.2);
  --zxcn1o5n: 0 2px 4px 0px rgba(28, 35, 48, 0.1),
    0 12px 12px -4px rgba(28, 35, 48, 0.1),
    0 20px 20px -12px rgba(28, 35, 48, 0.2);
}
.dzhn7v6 {
  background: var(--dzhn7v0);
}
.dzhn7v7 {
  background: var(--dzhn7v1);
}
.dzhn7v8 {
  background: var(--dzhn7v2);
}
.dzhn7v9 {
  background: var(--dzhn7v3);
}
.dzhn7va {
  background: var(--dzhn7v4);
}
.dzhn7vb {
  background: var(--dzhn7v5);
}
html:not(._1hx6zavz) .dzhn7vc {
  --dzhn7v0: var(--zxcn1ow);
  --dzhn7v1: var(--zxcn1op);
  --dzhn7v2: var(--zxcn1ou);
  --dzhn7v3: var(--zxcn1oh);
  --dzhn7v4: var(--zxcn1oj);
  --dzhn7v5: var(--zxcn1on);
}
html:not(._1hx6zavz) .dzhn7vd {
  --dzhn7v0: var(--zxcn1ox);
  --dzhn7v1: var(--zxcn1oq);
  --dzhn7v2: var(--zxcn1ov);
  --dzhn7v3: var(--zxcn1oi);
  --dzhn7v4: var(--zxcn1ok);
  --dzhn7v5: var(--zxcn1oo);
}
html._1hx6zavz .dzhn7ve {
  --dzhn7v0: var(--zxcn1ow);
  --dzhn7v1: var(--zxcn1op);
  --dzhn7v2: var(--zxcn1ou);
  --dzhn7v3: var(--zxcn1oh);
  --dzhn7v4: var(--zxcn1oj);
  --dzhn7v5: var(--zxcn1on);
}
html._1hx6zavz .dzhn7vf {
  --dzhn7v0: var(--zxcn1ox);
  --dzhn7v1: var(--zxcn1oq);
  --dzhn7v2: var(--zxcn1ov);
  --dzhn7v3: var(--zxcn1oi);
  --dzhn7v4: var(--zxcn1ok);
  --dzhn7v5: var(--zxcn1oo);
}
.dzhn7vg {
  border-bottom-right-radius: 0 !important;
  border-top-right-radius: 0 !important;
}
.dzhn7vh {
  width: var(--zxcn1oe);
}
.dzhn7vi {
  width: var(--zxcn1oa);
}
.thtpga0 {
  margin-bottom: -0.1em;
}
.thtpga2 {
  text-overflow: ellipsis;
  white-space: nowrap;
}
.thtpga0 .thtpga2 {
  padding-bottom: 0.1em;
}
@supports (display: -webkit-box) and (-webkit-line-clamp: 1) {
  .thtpga4 {
    display: -webkit-box;
    white-space: normal;
    -webkit-line-clamp: var(--thtpga3);
    -webkit-box-orient: vertical;
  }
}
,
  "main.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "main.js.LICENSE.txt": /**
 * @license React
 * react-dom.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react-jsx-runtime.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * react.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */

/**
 * @license React
 * scheduler.production.min.js
 *
 * Copyright (c) Facebook, Inc. and its affiliates.
 *
 * This source code is licensed under the MIT license found in the
 * LICENSE file in the root directory of this source tree.
 */
,
}
`;

exports[`sku-webpack-plugin start should start a development server 1`] = `
SCRIPTS: [
  "main.js",
]
CSS: [
  "main.css",
]
SOURCE HTML: <!DOCTYPE html>
<html>
  <head>
    <meta charset="utf-8">
    <title>
      Webpack App
    </title>
    <meta
      name="viewport"
      content="width=device-width, initial-scale=1"
    >
    <script
      defer
      src="scripts[0]"
    >
    </script>
    <link
      href="styles[0]"
      rel="stylesheet"
    >
  </head>
  <body>
  </body>
</html>
POST HYDRATE DIFFS: 
     >
   </head>
   <body>
+    <div>
+      <style type="text/css">
+        html,body{margin:0;padding:0;background:#F7F8FB}
+            html.sprinkles_darkMode__1hx6zavz,html.sprinkles_darkMode__1hx6zavz body{color-scheme:dark;background:#0E131B}
+      </style>
+      <div class="apacTheme_apac__1wfo4vb0 typography_lightModeTone_light__yi595p18 typography_darkModeTone_dark__yi595p1b">
+        <div class="reset_base__p77vct0 sprinkles_paddingBottom_gutter_mobile__1hx6zav7i sprinkles_paddingTop_gutter_mobile__1hx6zav6e sprinkles_paddingLeft_gutter_mobile__1hx6zav9q sprinkles_paddingRight_gutter_mobile__1hx6zav8m sprinkles_position_relative_mobile__1hx6zav5e typography_lightModeTone_light__yi595p18 typography_darkModeTone_dark__yi595p1b sprinkles_background_surface_lightMode__1hx6zav32 sprinkles_background_surfaceDark_darkMode__1hx6zav35">
+          <span class="reset_base__p77vct0 sprinkles_display_block_mobile__1hx6zav4y typography_fontFamily__yi595p0 typography_fontWeight_regular__yi595p1 typography_tone_neutral__yi595p21 capsize_capsizeStyle__m3vcy34 typography_textSize_large__yi595pd">
+            Is it working?
+          </span>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
\\ No newline at end of file

`;
